# MATH563Spring2026

./: .Renviron.example  .gitignore  .gitmodules  .nojekyll  .quartoignore  AUTHOR_WORKFLOW.md  README.md  _quarto.yml  devclasslib  index.html  index.md  index.qmd  requirements.txt  robots.txt  search.json  sitemap.xml
classlib/: .gitignore  README_InstructorWorkflow.md  pyproject.toml
classlib/classlib/: __init__.py  math_565_→_qmcpy_kernels_discrepancy_convergence_plan.md  nbviz.py  queuesim.py
classlib/classlib/discrepancy/: __init__.py  core.py  kernels.py  measures.py  usage.py
classlib/classlib/distributions/: __init__.py  uniform_sum.py  zero_inflated_expon.py
classlib/classlib/generators/: __init__.py  kronecker.py  kronecker_qp_fjh_backup.py  tensor_product_grid.py
classlib/classlib/generators/lattice_rules/: 2exp20_3600dim_new_lattice_rule_NO_REPEATS.txt
classlib/classlib/notebooks/: Bayesian_quadrature.ipynb  approval_rating_bernoulli_binomial_clt_ci.ipynb  bootstrap_confidence_intervals_demo.ipynb  confidence_interval_exact_vs_clt_vs_bootstrap.ipynb  coverage_exact_vs_clt.ipynb  health_wealth_gapminder_regression.ipynb  matched_pairs_sleep_study.ipynb
classlib/classlib/notebooks/.virtual_documents/: approval_rating_bernoulli_binomial_clt_ci.ipynb  (+1 more)
classlib/classlib/options/: __init__.py  asian.py
classlib/classlib/plots/: __init__.py  diagnostics.py
classlib/classlib/sampling/: __init__.py  accept_reject.py  metropolis.py  parallel_tempering.py
classlib/website/: courses.html  index.html  papers.html  software.html  talks.html
(+103 files in other folders)
